Fix section alignment
Applied a similar horizontal padding between the nav and the hero
sections so they will align in smaller viewports.

--- a/styles.css
+++ b/styles.css
@@ -65,7 +65,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 64px;
+    padding: 64px 16px;
     background-color: var(--dark-blue);
 }
 
